samples/glossentry/invalid/R8.dita
<?xml version="1.0" encoding="UTF-8"?>
<glossentry>
  <glossterm>NASA</glossterm>
  <glossdef><p>National Aeronautics and Space Administration.</p></glossdef>
</glossentry>